--- a/etc/supervisor/conf.d/elasticmq.conf
+++ b/etc/supervisor/conf.d/elasticmq.conf
@@ -1,6 +1,6 @@
 [program:elasticmq]
-command=/opt/jdk/bin/java -Dconfig.file=/opt/custom.conf -jar /opt/elasticmq-server.jar
-priority=1
+command=/opt/jdk/bin/java -Dconfig.file=/opt/config/elasticmq.conf -jar /opt/elasticmq-server.jar
+priority=10
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
