--- a/etc/supervisor/conf.d/sqs-init.conf
+++ b/etc/supervisor/conf.d/sqs-init.conf
@@ -1,9 +1,10 @@
 [program:sqs-init]
 command=/opt/sqs-init.sh
 priority=1
-autostart=true
 autorestart=false
+startretries=0
+startsec=0
+redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-redirect_stderr=true
 
