Update docker-compose to point to Docker hub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
    alpine-sqs:
-     image: alpine-sqs:dev
+     image: roribio16/alpine-sqs:latest
      container_name: alpine-sqs
      ports:
        - "9324:9324"
