--- a/opt/sqs-insight.conf
+++ b/opt/sqs-insight.conf
@@ -7,7 +7,8 @@
            "key": "notValidKey",
            "secretKey": "notValidSecret",
            "region": "eu-central-1",
-           "url": "http://localhost:9324/queue/default"
+           "url": "http://localhost:9324/queue/default",
+           "visibility": 0
         }
     ]
 }
