Use the new dynamic endpoints functionality of sqs-insight

--- a/opt/sqs-insight.conf
+++ b/opt/sqs-insight.conf
@@ -2,12 +2,14 @@
     "port": 9325,
     "rememberMessages": 100,
 
-    "endpoints": [
+    "endpoints": [],
+
+    "dynamicEndpoints": [
         {
            "key": "notValidKey",
            "secretKey": "notValidSecret",
            "region": "eu-central-1",
-           "url": "http://localhost:9324/queue/default",
+           "url": "http://localhost:9324",
            "visibility": 0
         }
     ]
