--- a/opt/elasticmq.conf
+++ b/opt/elasticmq.conf
@@ -20,6 +20,13 @@ queues {
         defaultVisibilityTimeout = 10 seconds
         delay = 5 seconds
         receiveMessageWait = 0 seconds
+
+        deadLettersQueue {
+            name = "dlq"
+            maxReceiveCount = 3
+        }
     }
+
+    dlq {}
 }
 
