--- a/opt/elasticmq.conf
+++ b/opt/elasticmq.conf
@@ -1,4 +1,5 @@
 include classpath("application.conf")
+akka.http.server.request-timeout = 40 s
 
 node-address {
     protocol = http
@@ -27,6 +28,10 @@ queues {
         }
     }
 
-    dlq {}
+    dlq {
+        defaultVisibilityTimeout = 10 seconds
+        delay = 5 seconds
+        receiveMessageWait = 0 seconds
+    }
 }
 
