Feat: upgrade to Alpine OpenJDK + last release of ElasticMQ and sqs-insight

--- a/etc/supervisor/conf.d/elasticmq.conf
+++ b/etc/supervisor/conf.d/elasticmq.conf
@@ -1,5 +1,5 @@
 [program:elasticmq]
-command=/opt/jdk/bin/java -Dconfig.file=/opt/config/elasticmq.conf -jar /opt/elasticmq-server.jar
+command=java -Dconfig.file=/opt/config/elasticmq.conf -jar /opt/elasticmq-server.jar
 priority=10
 autostart=true
 autorestart=true
