--- a/opt/sqs-insight.conf
+++ b/opt/sqs-insight.conf
@@ -2,16 +2,14 @@
     "port": 9325,
     "rememberMessages": 100,
 
-    "endpoints": [],
-
     "dynamicEndpoints": [
         {
-           "key": "notValidKey",
-           "secretKey": "notValidSecret",
-           "region": "eu-central-1",
-           "url": "http://localhost:9324",
-           "visibility": 0
+            "key": "localSQS",
+            "secretKey": "localSQS",
+            "region": "us-west-1",
+            "url": "http://127.0.0.1:9324"
         }
+
     ]
 }
 
