--- a/opt/elasticmq.conf
+++ b/opt/elasticmq.conf
@@ -1,8 +1,10 @@
 include classpath("application.conf")
 
+// What is the outside visible address of this ElasticMQ node
+// Used to create the queue URL (may be different from bind address!)
 node-address {
     protocol = http
-    host = "*"
+    host = localhost
     port = 9324
     context-path = ""
 }
@@ -15,11 +17,48 @@ rest-sqs {
     sqs-limits = strict
 }
 
+// Should the node-address be generated from the bind port/hostname
+// Set this to true e.g. when assigning port automatically by using port 0.
+generate-node-address = false
+
 queues {
+    queue1 {
+        defaultVisibilityTimeout = 10 seconds
+        delay = 5 seconds
+        receiveMessageWait = 0 seconds
+        deadLettersQueue {
+            name = "queue1-dead-letters"
+            maxReceiveCount = 3 // from 1 to 1000
+        }
+        fifo = false
+        contentBasedDeduplication = false
+        copyTo = "audit-queue-name"
+        moveTo = "redirect-queue-name"
+        tags {
+            tag1 = "tagged1"
+            tag2 = "tagged2"
+        }
+    }
+    queue1-dead-letters { }
+    audit-queue-name { }
+    redirect-queue-name { }
+    sqs-queue {
+        defaultVisibilityTimeout = 10 seconds
+        delay = 5 seconds
+        receiveMessageWait = 0 seconds
+        fifo = true
+        contentBasedDeduplication = false
+    }
     default {
         defaultVisibilityTimeout = 10 seconds
         delay = 5 seconds
         receiveMessageWait = 0 seconds
     }
+}
+
+// Region and accountId which will be included in resource ids
+aws {
+    region = eu-west-1
+    accountId = 000000000000
 }
 
