Add default dead-letter queue (#34)
Co-authored-by: Gal Cohen <galcohen@galaxy-note9.ads.autodesk.com>
Co-authored-by: galcohen <gal.cohen@autodesk.com>

--- a/opt/elasticmq.conf
+++ b/opt/elasticmq.conf
@@ -1,4 +1,5 @@
 include classpath("application.conf")
+akka.http.server.request-timeout = 40 s
 
 node-address {
     protocol = http
@@ -17,6 +18,17 @@ rest-sqs {
 
 queues {
     default {
+        defaultVisibilityTimeout = 10 seconds
+        delay = 5 seconds
+        receiveMessageWait = 0 seconds
+
+        deadLettersQueue {
+            name = "dlq"
+            maxReceiveCount = 3
+        }
+    }
+
+    dlq {
         defaultVisibilityTimeout = 10 seconds
         delay = 5 seconds
         receiveMessageWait = 0 seconds
