support linux/arm64/v8 builds

--- a/etc/supervisor/conf.d/elasticmq.conf
+++ b/etc/supervisor/conf.d/elasticmq.conf
@@ -1,9 +1,8 @@
 [program:elasticmq]
-command=/opt/jdk/bin/java -Dconfig.file=/opt/config/elasticmq.conf -jar /opt/elasticmq-server.jar
+command=/usr/bin/java -Dconfig.file=/opt/config/elasticmq.conf -jar /opt/elasticmq-server.jar
 priority=10
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-
